[gd_scene load_steps=4 format=3 uid="uid://bqy3xv8jmn6gp"]

[ext_resource type="Script" uid="uid://b3mx7yeavjcym" path="res://src/scripts/player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_attack"]
size = Vector2(48, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_player"]
size = Vector2(32, 64)

[node name="Player" type="CharacterBody2D"]
collision_mask = 4
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = SubResource("PlaceholderTexture2D_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_player")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(40, -32)
collision_layer = 0
collision_mask = 2

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_attack")
disabled = true

[node name="AttackColorRect" type="ColorRect" parent="AttackArea"]
offset_left = -24.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 16.0
color = Color(1, 0.2, 0.2, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true
position_smoothing_enabled = true
position_smoothing_speed = 5.0
offset = Vector2(0, -50)
